# video-eval-harness

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  DEPLOY.md  DEPLOYMENT.md  Dockerfile  Makefile  README.md  docker-compose.dev.yml  pyproject.toml
configs/: benchmark.yaml  benchmark_all_models.yaml  benchmark_all_models_optimized.yaml  benchmark_fast.yaml  models.yaml  prompts.yaml  test_suite.yaml
data/: run_20260321_frontier-accuracy_sweep_c4c1_results.json  run_20260321_frontier-full-suite_sweep_1e0e_results.json  run_20260321_post-synonym-fix_e998_results.json  run_20260322_budget-showdown_35ac_results.json  run_20260322_epic-kitchens-all-models_1d9d_results.json  run_20260322_epic-kitchens-full-benchmark_6872_ensemble_results.json  run_20260322_epic-kitchens-full-benchmark_6872_results.json  run_20260322_frontier-showdown_bb9a_results.json  run_20260322_ucf101-all-7-models_4da8_results.json  run_20260322_ucf101-fast-accuracy_sweep_7eb3_results.json  run_20260322_ucf101-frontier-accuracy_sweep_2f4f_results.json  run_20260322_ucf101-full-benchmark_95e2_ensemble_results.json  run_20260322_ucf101-full-benchmark_95e2_results.json  run_20260322_ucf101-optimized-prompt_1c93_results.json  run_20260323_ucf101-fast-models_acb2_results.json
deploy/: README.md  __init__.py  api_server.py  docker-compose.prod.yml  vercel.json
scripts/: dev-setup.sh  download-test-clips.sh  download_epic_kitchens_subset.py  test-run.sh
test_videos/: ground_truth.json
tests/: conftest.py  test_action_label_schema.py  test_agreement.py  test_api_server.py  (+18 more)
(+112 files in other folders)
